--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   },
   "homepage": "https://github.com/anuarshaidenov/portfolio#readme",
   "devDependencies": {
-    "hint": "^6.1.4"
+    "hint": "^6.1.4",
+    "stylelint": "^13.13.1",
+    "stylelint-config-standard": "^21.0.0",
+    "stylelint-csstree-validator": "^1.9.0",
+    "stylelint-scss": "^3.21.0"
   }
 }
